--- a/hello-world.html
+++ b/hello-world.html
@@ -10,7 +10,7 @@
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: xx-large;
 	font-weight: bold;
-	background-color: #E3F0FB;
+	background-color: red;
 	border-radius: 4px;
 	padding: 10px;
 	text-align: center;
